# complete_diplom_2023_monolit

./: .gitignore  README.md  emodule.sh  omodule.sh  setup.sh
expert_module/: CMakeLists.txt  DataBase.h  Database.cpp  Source.h  configuration.cpp  configuration.h  configurationlistwindow.cpp  configurationlistwindow.h  configurationlistwindow.ui  configurationmenu.cpp  configurationmenu.h  configurationmenu.ui  configurationname.cpp  configurationname.h  configurationname.ui  drawinglabel.cpp  drawinglabel.h  drawningZoneWindow.cpp  drawningZoneWindow.h  drawningZoneWindow.ui  global.cpp  global.h  kbobject.h  main.cpp  newcamera2.cpp  newcamera2.h  newcamera2.ui  rule.cpp  rule.h  setrulewindow.cpp  setrulewindow.h  setrulewindow.ui  settingdatabasewindow.cpp  settingdatabasewindow.h  settingdatabasewindow.ui  systemreaction.cpp  systemreaction.h  zone.cpp
expert_module/segmentedImageLabel/: CMakeLists.txt  segmentedimagelabel.cpp
expert_module/segmentedImageLabel/fillZoneAlgorithm/: fillZoneAlgorithm.h
expert_module/serviceFunctions/: CMakeLists.txt  serviceFunctions.hpp
mongo-docker/: docker-compose.yml
operator_module/: CMakeLists.txt  DataBase.h  Database.cpp  Source.cpp  configuration.cpp  configuration.h  global.cpp  global.h  knowledgebase.cpp  knowledgebase.h  logicengine.cpp  logicengine.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  operatorstackedwindow.cpp  operatorstackedwindow.h  operatorstackedwindow.ui  qcheckconfiguration.cpp  qcheckconfiguration.h  qdetectionlabel.cpp  qdetectionlabel.h  qtablelabel.cpp  qtablelabel.h  qtablewidgetitemdoubleclick.cpp  qtablewidgetitemdoubleclick.h  qvideolabel.cpp  qvideolabel.h  reportfromdb.cpp  reportfromdb.h  rule.cpp  rule.h  systemreaction.cpp  systemreaction.h  videoengine.cpp  videoengine.h  zone.h
operator_module/classification/: CMakeLists.txt  classificationalgorithm.h  detectobject.cpp  detectobject.h  kbobject.cpp  majorobject.cpp  majorobject.h  minoronject.cpp  minoronject.h  simpleyolo.cpp  simpleyolo.h  simpleyolov5.cpp  simpleyolov5.h  yolo2dnn.cpp  yolo2dnn.h
operator_module/segmentedImageLabel/: segmentedimagelabel.cpp  segmentedimagelabel.h
operator_module/segmentedImageLabel/fillZoneAlgorithm/: CMakeLists.txt  fillZoneAlgorithm.cpp  fillZoneAlgorithm.h.autosave  fillZoneAlgorithm_test.cpp
operator_module/serviceFunctions/: serviceFunctions.cpp
